[gd_scene load_steps=26 format=3 uid="uid://cmg5wr6ocap4s"]

[ext_resource type="Theme" uid="uid://chaavt4sj5lex" path="res://assets/themes/main_ui.tres" id="1_76pn1"]
[ext_resource type="Script" path="res://main_ui.gd" id="2_15v6i"]
[ext_resource type="Script" path="res://assets/prefab/MargainExpander.gd" id="3_ek45p"]
[ext_resource type="Texture2D" uid="uid://dwrhwqxwce3ab" path="res://assets/icons/add_circle_16dp_E8EAED_FILL0_wght400_GRAD0_opsz20.png" id="4_2smo7"]
[ext_resource type="Script" path="res://assets/ConfirmDeleteDialog.gd" id="4_3vxcl"]
[ext_resource type="Texture2D" uid="uid://7r67r3ern1fl" path="res://assets/icons/folder_copy_16dp_E8EAED_FILL0_wght400_GRAD0_opsz20.png" id="4_rik15"]
[ext_resource type="Texture2D" uid="uid://coortee03c24r" path="res://assets/icons/search_16dp_E8EAED_FILL0_wght400_GRAD0_opsz20.png" id="4_u7g62"]
[ext_resource type="Script" path="res://assets/prefab/ConfirmDatabaseDeletion.gd" id="5_6n0d6"]
[ext_resource type="Texture2D" uid="uid://bj4geehjr5sxl" path="res://assets/icons/folder_delete_16dp_E8EAED_FILL0_wght400_GRAD0_opsz20.png" id="5_c5p75"]
[ext_resource type="Script" path="res://assets/prefab/SyncOptionsWindow.gd" id="6_qbbq2"]
[ext_resource type="Texture2D" uid="uid://blgms6tib5yal" path="res://assets/icons/cloud_download_16dp_E8EAED_FILL0_wght400_GRAD0_opsz20.png" id="7_rpqvy"]
[ext_resource type="Texture2D" uid="uid://crlm408qgh2wy" path="res://assets/icons/sync_16dp_E8EAED_FILL0_wght400_GRAD0_opsz20.png" id="8_i2now"]
[ext_resource type="Texture2D" uid="uid://bh0gfoeajt3ei" path="res://assets/icons/cloud_upload_16dp_E8EAED_FILL0_wght400_GRAD0_opsz20.png" id="8_nxc8m"]

[sub_resource type="LabelSettings" id="LabelSettings_yx68k"]
font_size = 36

[sub_resource type="InputEventKey" id="InputEventKey_73agp"]
device = -1
ctrl_pressed = true
keycode = 66
unicode = 98

[sub_resource type="Shortcut" id="Shortcut_37tyo"]
events = [SubResource("InputEventKey_73agp")]

[sub_resource type="Animation" id="Animation_l1yom"]
resource_name = "BackupFeedback"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.9, 2),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7x4tl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6reau"]
_data = {
"BackupFeedback": SubResource("Animation_l1yom"),
"RESET": SubResource("Animation_7x4tl")
}

[sub_resource type="InputEventKey" id="InputEventKey_gahk3"]
device = -1
ctrl_pressed = true
keycode = 83
unicode = 115

[sub_resource type="Shortcut" id="Shortcut_tykto"]
events = [SubResource("InputEventKey_gahk3")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d6uru"]
bg_color = Color(0.164706, 0.192157, 0.25098, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Animation" id="Animation_5iwf7"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_pq2o6"]
resource_name = "ShowPushNotification"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.3, 2),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vbk5u"]
_data = {
"RESET": SubResource("Animation_5iwf7"),
"ShowPushNotification": SubResource("Animation_pq2o6")
}

[node name="MainUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_76pn1")
script = ExtResource("2_15v6i")

[node name="UiMargain" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 25
script = ExtResource("3_ek45p")

[node name="MainContainer" type="VBoxContainer" parent="UiMargain"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="TopBar" type="HBoxContainer" parent="UiMargain/MainContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="UiMargain/MainContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "NoobDocs"
label_settings = SubResource("LabelSettings_yx68k")

[node name="CreateButton" type="Button" parent="UiMargain/MainContainer/TopBar"]
layout_mode = 2
theme_override_constants/icon_max_width = 16
text = "New"
icon = ExtResource("4_2smo7")

[node name="BackupButton" type="Button" parent="UiMargain/MainContainer/TopBar"]
layout_mode = 2
theme_override_constants/icon_max_width = 16
shortcut = SubResource("Shortcut_37tyo")
text = "Backup"
icon = ExtResource("4_rik15")

[node name="DeleteDatabasebutton" type="Button" parent="UiMargain/MainContainer/TopBar"]
layout_mode = 2
theme_override_constants/icon_max_width = 18
text = "Delete Database"
icon = ExtResource("5_c5p75")

[node name="CloseElements" type="VBoxContainer" parent="UiMargain/MainContainer"]
layout_mode = 2

[node name="SearchBar" type="LineEdit" parent="UiMargain/MainContainer/CloseElements"]
layout_mode = 2
placeholder_text = "Search"
right_icon = ExtResource("4_u7g62")

[node name="BackupFeedback" type="ProgressBar" parent="UiMargain/MainContainer/CloseElements"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
max_value = 1.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="UiMargain/MainContainer/CloseElements/BackupFeedback"]
libraries = {
"": SubResource("AnimationLibrary_6reau")
}

[node name="ContentsScroll" type="ScrollContainer" parent="UiMargain/MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Contents" type="GridContainer" parent="UiMargain/MainContainer/ContentsScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 4

[node name="HBoxContainer" type="HBoxContainer" parent="UiMargain/MainContainer"]
layout_mode = 2
alignment = 1

[node name="SyncOptionsButton" type="Button" parent="UiMargain/MainContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/icon_max_width = 16
shortcut = SubResource("Shortcut_tykto")
text = "Sync Options"
icon = ExtResource("8_i2now")

[node name="ConfirmDeleteDialog" type="ConfirmationDialog" parent="."]
initial_position = 1
size = Vector2i(250, 110)
dialog_text = "Are you sure you want to delete this document. This can not be undone!"
dialog_autowrap = true
script = ExtResource("4_3vxcl")

[node name="ConfirmDatabaseDeletion" type="Window" parent="."]
canvas_item_default_texture_filter = 0
title = "Please confirm"
initial_position = 2
size = Vector2i(450, 200)
visible = false
exclusive = true
script = ExtResource("5_6n0d6")

[node name="DialogMargain" type="MarginContainer" parent="ConfirmDatabaseDeletion"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Contents" type="VBoxContainer" parent="ConfirmDatabaseDeletion/DialogMargain"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="ConfirmDatabaseDeletion/DialogMargain/Contents"]
layout_mode = 2
text = "Please enter the following code"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CodeLabel" type="Label" parent="ConfirmDatabaseDeletion/DialogMargain/Contents"]
layout_mode = 2
text = "3075"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CodeEnter" type="LineEdit" parent="ConfirmDatabaseDeletion/DialogMargain/Contents"]
layout_mode = 2
placeholder_text = "Code"

[node name="Buttons" type="HBoxContainer" parent="ConfirmDatabaseDeletion/DialogMargain/Contents"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="ConfirmDatabaseDeletion/DialogMargain/Contents/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="ConfirmButton" type="Button" parent="ConfirmDatabaseDeletion/DialogMargain/Contents/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Confirm"

[node name="SyncOptionsWindow" type="Window" parent="."]
title = "Sync Options"
initial_position = 2
size = Vector2i(350, 250)
visible = false
script = ExtResource("6_qbbq2")

[node name="MarginContainer" type="MarginContainer" parent="SyncOptionsWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Lines" type="VBoxContainer" parent="SyncOptionsWindow/MarginContainer"]
layout_mode = 2

[node name="RemoteEdit" type="LineEdit" parent="SyncOptionsWindow/MarginContainer/Lines"]
layout_mode = 2
placeholder_text = "Remote Server IP"

[node name="SaveAsRemote" type="Button" parent="SyncOptionsWindow/MarginContainer/Lines"]
layout_mode = 2
text = "Save Remote"

[node name="ActionButtons" type="HBoxContainer" parent="SyncOptionsWindow/MarginContainer/Lines"]
layout_mode = 2

[node name="PullButton" type="Button" parent="SyncOptionsWindow/MarginContainer/Lines/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/icon_max_width = 36
text = "Pull"
icon = ExtResource("7_rpqvy")

[node name="PushButton" type="Button" parent="SyncOptionsWindow/MarginContainer/Lines/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/icon_max_width = 36
text = "Push"
icon = ExtResource("8_nxc8m")

[node name="PushSuccessfulPopup" type="Panel" parent="SyncOptionsWindow/MarginContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_d6uru")

[node name="Label" type="Label" parent="SyncOptionsWindow/MarginContainer/PushSuccessfulPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -8.5
offset_right = 52.0
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
text = "Push Successful"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="SyncOptionsWindow/MarginContainer/PushSuccessfulPopup"]
libraries = {
"": SubResource("AnimationLibrary_vbk5u")
}
speed_scale = 1.5

[node name="RemoteSavedPopup" type="Panel" parent="SyncOptionsWindow/MarginContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_d6uru")

[node name="Label" type="Label" parent="SyncOptionsWindow/MarginContainer/RemoteSavedPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -8.5
offset_right = 52.0
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
text = "Remote Saved"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="SyncOptionsWindow/MarginContainer/RemoteSavedPopup"]
libraries = {
"": SubResource("AnimationLibrary_vbk5u")
}
speed_scale = 1.5

[node name="PullRequest" type="HTTPRequest" parent="SyncOptionsWindow"]
timeout = 2.0

[node name="PushRequest" type="HTTPRequest" parent="SyncOptionsWindow"]
timeout = 2.0

[connection signal="pressed" from="UiMargain/MainContainer/TopBar/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="UiMargain/MainContainer/TopBar/BackupButton" to="." method="_on_backup_button_pressed"]
[connection signal="pressed" from="UiMargain/MainContainer/TopBar/DeleteDatabasebutton" to="." method="_on_delete_databasebutton_pressed"]
[connection signal="text_changed" from="UiMargain/MainContainer/CloseElements/SearchBar" to="." method="_on_search_bar_text_changed"]
[connection signal="pressed" from="UiMargain/MainContainer/HBoxContainer/SyncOptionsButton" to="." method="_on_sync_options_button_pressed"]
[connection signal="confirmed" from="ConfirmDeleteDialog" to="." method="_on_confirm_delete_dialog_confirmed"]
[connection signal="close_requested" from="ConfirmDatabaseDeletion" to="ConfirmDatabaseDeletion" method="_on_close_requested"]
[connection signal="pressed" from="ConfirmDatabaseDeletion/DialogMargain/Contents/Buttons/CancelButton" to="ConfirmDatabaseDeletion" method="_on_cancel_button_pressed"]
[connection signal="pressed" from="ConfirmDatabaseDeletion/DialogMargain/Contents/Buttons/ConfirmButton" to="ConfirmDatabaseDeletion" method="_on_confirm_button_pressed"]
[connection signal="close_requested" from="SyncOptionsWindow" to="SyncOptionsWindow" method="_on_close_requested"]
[connection signal="pressed" from="SyncOptionsWindow/MarginContainer/Lines/SaveAsRemote" to="SyncOptionsWindow" method="_on_save_as_remote_pressed"]
[connection signal="pressed" from="SyncOptionsWindow/MarginContainer/Lines/ActionButtons/PullButton" to="SyncOptionsWindow" method="_on_pull_button_pressed"]
[connection signal="pressed" from="SyncOptionsWindow/MarginContainer/Lines/ActionButtons/PushButton" to="SyncOptionsWindow" method="_on_push_button_pressed"]
[connection signal="request_completed" from="SyncOptionsWindow/PullRequest" to="SyncOptionsWindow" method="_on_pull_request_request_completed"]
[connection signal="request_completed" from="SyncOptionsWindow/PushRequest" to="SyncOptionsWindow" method="_on_push_request_request_completed"]
